- Updated web service URI - Fixed bug with listing grid element overlapping quick search.

--- a/css/wolfnet.less
+++ b/css/wolfnet.less
@@ -23,6 +23,8 @@
 	{
 		border:     1px solid #DDD;
 		padding:    8px;
+		position:   relative;
+		z-index:    10;
 		background: -moz-linear-gradient(top,  @gradientColor1 60%, @gradientColor2 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(60%,@gradientColor1), color-stop(100%,@gradientColor2)); /* Chrome,Safari4+ */
 		background: -webkit-linear-gradient(top,  @gradientColor1 60%,@gradientColor2 100%); /* Chrome10+,Safari5.1+ */
@@ -275,6 +277,7 @@
 	&.wolfnet_listingGrid
 	{
 		position: relative;
+		z-index:  1;
 		
 		.wolfnet_listing
 		{
